--- a/.env.rtf
+++ b/.env.rtf
@@ -9,5 +9,4 @@
 \f0\fs26 \cf0 TYPHOON_OCR_API_KEY=sk-OgA09Zhje14fPMTSw92jYeUHpvD2GLDGBj5LdOJuZAQwgNbC\
 OPENAI_API_KEY=$\{TYPHOON_OCR_API_KEY\}\
 OPENAI_BASE_URL=https://api.opentyphoon.ai/v1\
-TYPHOON_BASE_URL=$\{OPENAI_BASE_URL\}\
-}
+TYPHOON_BASE_URL=$\{OPENAI_BASE_URL\}}
